# ai-quality-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: classification_examples.yaml  compliance_examples.yaml  extraction_examples.json  minimal_suite.json  starter_suite.json  summarization_examples.json
examples/: README.md
src/ai_quality_lab/: __init__.py  cli.py  runner.py  simple_runner.py
src/ai_quality_lab/adapters/: __init__.py  openai_optional.py  simple.py
src/ai_quality_lab/loaders/: __init__.py  suite_loader.py
src/ai_quality_lab/models/: __init__.py  core.py
src/ai_quality_lab/reports/: __init__.py  writers.py
src/ai_quality_lab/scorers/: __init__.py  simple.py
tests/: conftest.py  test_adapters_simple.py  test_cli_behavior.py  test_import_guards.py  test_loaders.py  test_reports_simple.py  test_scorers_simple.py  test_task_suites.py
